# YuFeng

./: .gitignore  LICENSE  README.md  pyrightconfig.json
BaseCpp/: CMakeLists.txt
BaseCpp/common/: shm_object.cc  shm_object.h
BaseCpp/include/: worker.hpp
BaseCpp/test/: shm_test.cpp
BasicPython/Chapter10/: .~lock.result.xlsx#  csv_tools.py  result.xlsx
BasicPython/Chapter11/: binary_search.py  get_kth_max.py  test_binary_search.py  test_get_kth_max.py
BasicPython/Chapter12/: base_numpy.py
BasicPython/Chapter13/: plt.py  plt_random.py
BasicPython/Chapter14/: pd.py
BasicPython/Chapter2/: factorial.py  file.txt
BasicPython/Chapter3/: str_repr.py
BasicPython/Chapter4/: list_dict.py
BasicPython/Chapter7/: usefull.py
ML/Chapter01/: record.md
ML/Chapter02/: clt.py
ML/Chapter03/: hw1.ipynb  test.py
ML/Chapter04/: exp2.ipynb
ML/Chapter05/: hw3.ipynb
ML/Chapter06/: exp4.ipynb
ML/Chapter07/: hw5.ipynb
ML/Chapter08/: exp6.ipynb  result.csv
Opt/: CMakeLists.txt
Opt/nlopt/: example.cc
Os/Chapter02/: forgdb.cc  simple_debug.cc  thread_debug.cpp
Os/Chapter05/: process.cpp
